<resources>
    <string name="app_name">SawitProTest</string>
    <string name="list_ticket">List Ticket</string>
    <string name="add_ticket">Add Ticket</string>
    <string name="date">Date</string>
    <string name="date_range">Date Range</string>
    <string name="time">Time</string>
    <string name="truck_license_number">Truck License Number</string>
    <string name="hint_license_number">ex: BM 1234 HK</string>
    <string name="driver_name">Driver Name</string>
    <string name="inbound_weight">Inbound Weight (Max: 10 Ton)</string>
    <string name="outbound_weight">Outbound Weight (Max: 10 Ton)</string>
    <string name="inbound_hint">ex: 7.5</string>
    <string name="outbount_hint">ex: 0.5</string>
    <string name="net_weight">Net Weight (Ton)</string>
    <string name="submit_ticket">Submit Ticket</string>
    <string name="ticket_form">Ticket Form</string>
    <string name="hint_year">yyyy-MM-dd</string>
    <string name="hint_year_range">ex: 2022-01-01 to 2022-12-31</string>
    <string name="edit">Edit</string>
    <string name="input">Input</string>
    <string name="cancel">Cancel</string>
    <string name="edit_ticket">Edit Ticket</string>
    <string name="input_ticket">Input Ticket</string>
    <string name="input_data_confirmation">Are you sure to input this?</string>
    <string name="edit_confirmation">Are you sure to edit this?</string>
    <string name="edit_success">Edit Success</string>
    <string name="input_success">Input Success</string>
    <string name="query_hint">Search here.....</string>
    <string name="error_something_went_wrong">Error Something Went Wrong</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="date_range_format">%s to %s</string>
    <string name="filter">Filter</string>
    <string name="clear_all">Clear All</string>
    <string name="no_data">No Data</string>
    <string name="detail">Detail</string>
    <string name="add_new">Add New</string>
    <string name="date_format">Date : %s</string>
    <string name="license_number_format">License Number : %s</string>
    <string name="driver_name_format">Driver Name : %s</string>
    <string name="detail_ticket">Detail Ticket</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="syncing">Sync Data.....</string>
    <string name="sync_failed">Sync Failed</string>
    <string name="sync_success">Sync Success</string>
</resources>