<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp"
    tools:context=".mvvm.view.FilterDialogFragment">

    <TextView
        android:id="@+id/tv_date_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunito_medium"
        android:text="@string/date_range"
        android:textColor="@color/green_bold"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_clear_all" />

    <EditText
        android:id="@+id/edit_date_range"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:inputType="date"
        android:hint="@string/hint_year_range"
        android:background="@drawable/curved_outlined_background"
        android:drawableEnd="@drawable/green_date_range_32"
        android:singleLine="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_range" />

    <TextView
        android:id="@+id/tv_license_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/truck_license_number"
        android:textColor="@color/green_bold"
        android:fontFamily="@font/nunito_medium"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_date_range" />

    <EditText
        android:id="@+id/edit_license_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:inputType="textCapCharacters"
        android:hint="@string/hint_license_number"
        android:background="@drawable/curved_outlined_background"
        android:singleLine="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_license_number" />

    <TextView
        android:id="@+id/tv_driver_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/driver_name"
        android:textColor="@color/green_bold"
        android:fontFamily="@font/nunito_medium"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_license_number" />

    <EditText
        android:id="@+id/edit_driver_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:inputType="textPersonName"
        android:background="@drawable/curved_outlined_background"
        android:singleLine="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_driver_name" />

    <Button
        android:id="@+id/button_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/apply_filter"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:padding="7dp"
        android:backgroundTint="@color/main_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_driver_name" />

    <TextView
        android:id="@+id/tv_clear_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/nunito_medium"
        android:text="@string/clear_all"
        android:textColor="@color/green_bold"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>