<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sawitprotest.mvvm.view.AddTicketActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp">

        <include
            android:id="@+id/custom_action_bar"
            layout="@layout/custom_action_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/date"
            android:textColor="@color/green_bold"
            android:fontFamily="@font/nunito_medium"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/custom_action_bar" />

        <EditText
            android:id="@+id/edit_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:inputType="date"
            android:hint="@string/hint_year"
            android:background="@drawable/curved_outlined_background"
            android:drawableEnd="@drawable/green_date_range_32"
            android:singleLine="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/time"
            android:textColor="@color/green_bold"
            android:fontFamily="@font/nunito_medium"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_date" />

        <EditText
            android:id="@+id/edit_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:inputType="time"
            android:background="@drawable/curved_outlined_background"
            android:drawableEnd="@drawable/green_access_time_32"
            android:singleLine="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_time" />

        <TextView
            android:id="@+id/tv_license_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/truck_license_number"
            android:textColor="@color/green_bold"
            android:fontFamily="@font/nunito_medium"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_time" />

        <EditText
            android:id="@+id/edit_license_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:inputType="textCapCharacters"
            android:hint="@string/hint_license_number"
            android:background="@drawable/curved_outlined_background"
            android:singleLine="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_license_number" />

        <TextView
            android:id="@+id/tv_driver_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/driver_name"
            android:textColor="@color/green_bold"
            android:fontFamily="@font/nunito_medium"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_license_number" />

        <EditText
            android:id="@+id/edit_driver_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:inputType="textPersonName"
            android:background="@drawable/curved_outlined_background"
            android:singleLine="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_driver_name" />

        <TextView
            android:id="@+id/tv_inbound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/inbound_weight"
            android:textColor="@color/green_bold"
            android:fontFamily="@font/nunito_medium"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_driver_name" />

        <EditText
            android:id="@+id/edit_inbound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:inputType="numberDecimal"
            android:maxLength="4"
            android:hint="@string/inbound_hint"
            android:background="@drawable/curved_outlined_background"
            android:singleLine="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_inbound" />

        <TextView
            android:id="@+id/tv_outbound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/outbound_weight"
            android:textColor="@color/green_bold"
            android:fontFamily="@font/nunito_medium"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_inbound" />

        <EditText
            android:id="@+id/edit_outbound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:inputType="numberDecimal"
            android:maxLength="4"
            android:hint="@string/outbount_hint"
            android:background="@drawable/curved_outlined_background"
            android:singleLine="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_outbound" />

        <TextView
            android:id="@+id/tv_net_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/net_weight"
            android:textColor="@color/green_bold"
            android:fontFamily="@font/nunito_medium"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_outbound" />

        <EditText
            android:id="@+id/edit_net_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:inputType="numberDecimal"
            android:background="@drawable/curved_outlined_background"
            android:singleLine="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_net_weight" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/curved_background"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/submit_ticket"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_net_weight" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>