<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="12dp"
    android:layout_marginBottom="10dp"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="16sp"
            android:fontFamily="@font/nunito_bold"
            tools:text="Date : 2020-03-01"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_license_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            tools:text="License Number : B 123 A"
            android:textSize="16sp"
            android:fontFamily="@font/nunito_bold"/>

        <TextView
            android:id="@+id/tv_driver_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            tools:text="Driver Name : Baskara"
            android:textSize="16sp"
            android:fontFamily="@font/nunito_bold"/>

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="7dp"
                android:text="@string/detail"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:fontFamily="@font/nunito_bold"/>

            <Button
                android:id="@+id/button_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/edit"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:fontFamily="@font/nunito_bold"/>

            <Button
                android:id="@+id/button_add_new"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="7dp"
                android:text="@string/add_new"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:fontFamily="@font/nunito_bold"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>